# koe

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  index.html  package-lock.json  package.json  release-please-config.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
speech-helper/: CLAUDE.md  main.swift
src/: App.tsx  CLAUDE.md  ErrorBoundary.tsx  main.tsx  styles.css  transcriptSegments.ts
src-tauri/: CLAUDE.md  Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/binaries/: koe-speech-helper-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: CLAUDE.md  export.rs  insertion.rs  lib.rs  main.rs  speech.rs
